Wed Jun 10 12:57:03 1998  Owen Taylor  <otaylor@gtk.org>

	* gdk/gdkcc.c glib/ghash.c glib/glib.h glib/gstring.c
          glib/gutils.c glib/testglib.c glib/gdataset.c
          gtk/gtkaccelgroup.c gtk/gtkmain.c gtk/gtksignal.c
          gtk/gtktext.c gtk/gtkbindings.c:

	 renamed g_const_pointer => gconstpointer

Wed Jun 10 06:25:17 1998  Tim Janik  <timj@gtk.org>

	* gdk/gdk.c (gdk_init): prevent gdk_init() from segfaulting when
	invoked with (NULL, NULL); (this worked sometime ago).

	* gtk/gtktypeutils.h: 
	* gtk/gtktypeutils.c: enum and flags type creation can now be done
	through gtk_type_register_enum() and gtk_type_register_flags(),
	which allow to specify the enum value arrays directly.
	the NULL terminated value arrays can be retrived through
	gtk_type_enum_get_values() and gtk_type_flags_get_values();
	(gtk_type_children_types): new function to query derived types.

1998-06-09  Raja R Harinath  <harinath@cs.umn.edu>

	* gtk/Makefile.am (gtkmarshal.c gtkmarshal.h): Pass $srcdir in
	environment to genmarshal.pl.
	(gtk.defs,gtktypebuiltins*): Add $(srcdir) where needed (in the
	rule), and removed it where not needed (in the dependencies).

	* gtk/genmarshal.pl: Look for `gtkmarshal.list' in $srcdir.

Tue Jun  9 18:44:57 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtkobject.c: Removed g_object_pointer_hash, which
	was just g_direct_hash.

Mon May 25 19:54:20 1998  Owen Taylor  <otaylor@gtk.org>

	* configure.in: x_libs=, not $x_libs=. Enough said.
          (Case only hit for --disable-xshm)
	
Mon May 25 12:08:14 1998  Owen Taylor  <otaylor@gtk.org>

	* configure.in (LDFLAGS): Add to $CFLAGS and $LDFLAGS
	  when testing for X libraries, don't replace them. Because
	  the user might have specified the path to the X libraries
	  themself before running configure.

	* examples/**.c: Changed all gpointer * to gpointer
	
1998-06-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkhandlebox.h (struct _GtkHandleBox): Removed the